# axum-rtc

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: mediasoup.ts  signaling.ts
src/: config.rs  main.rs  room.rs  signaling.rs
